<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="113dp"
        android:layout_height="113dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/profil"
        android:layout_marginStart="24dp" />

    <TextView
        android:id="@+id/username_user"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginRight="24dp"
        android:textStyle="bold"
        android:text="@string/username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.12"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <TextView
        android:id="@+id/posts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/posts"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/followers"
        app:layout_constraintStart_toStartOf="@+id/username_user" />

    <TextView
        android:id="@+id/followers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/followers"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toStartOf="@+id/following"
        app:layout_constraintStart_toEndOf="@+id/posts"
        app:layout_constraintTop_toBottomOf="@+id/username_user"
        android:onClick="showFollowers"/>

    <TextView
        android:id="@+id/following"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/following"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/username_user"
        app:layout_constraintTop_toTopOf="@+id/followers"
        android:onClick="showFollowing"/>

    <Button
        android:id="@+id/edit_profile_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/edit_profile"
        android:layout_marginTop="14dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        android:onClick="lauchEditProfile"/>

   <GridView
       android:layout_width="match_parent"
       android:layout_height="0dp"
       android:numColumns="3"
       android:layout_weight="1"
       app:layout_constraintTop_toBottomOf="@+id/edit_profile_button"/>

</androidx.constraintlayout.widget.ConstraintLayout>